Prevented drags offscreen

--- a/less/app.less
+++ b/less/app.less
@@ -33,7 +33,12 @@
   width: 100%;
   height: 45px;
   position: fixed;
-  z-index: 200;
+  z-index: 210;
+}
+
+#dragbox {
+  width: 100%;
+  height: 100%;
 }
 
 #chatbar {
@@ -44,7 +49,7 @@
   bottom: 0px;
   width: 100%;
   margin-bottom: 0px;
-  z-index: 200;
+  z-index: 210;
 }
 
 // .bottom-bar {
